# stm32-wifi-door-bell

./: README.md  config.ini  stm32cubemx.ioc
firmware/: .gitignore  CMakeLists.txt  build.sh  button.c  button.h  config.c  config.h  debug.c  interrupts.c  main.c  network.c  network.h  platform_config.h  rtc.c  rtc.h  run-flash.sh  run-gdb.sh  sdcard-fat-structs.h  sdcard-fat.h  sdcard-info.h  spi.c  stm32_flash.md.in  stm32f0xx_hal_conf.h  stm32f10x_conf.h  system_stm32f0xx.c
firmware-new/: .gitignore  CMakeLists.txt  config.c  config.h  main.c  platform_config.h  startup_stm32f072xb.s  stm32f072rb_flash.ld  system_stm32f0xx.c
firmware/stm32lib/: cc3000.c  cc3000.h  crc32.c  crc32.h  debug.c  debug.h  newlib.c  ntp.c  ntp.h  sdcard-fat-structs.h  sdcard-fat.c  sdcard-fat.h  sdcard.c  sdcard.h  spi.c  spi.h  util.c  util.h
firmware/stm32lib/cc3000-host-driver/: cc3000_common.h  error_codes.h  evnt_handler.c  hci.c  hci.h  host_driver_version.h  socket.c  socket.h  wlan.c  wlan.h
firmware/stm32lib/polarssl/: config.h
firmware/stm32lib/test/: Makefile  test-all  test-rsa.c  test.pem  test.pub
hardware/: $stm32-wifi-door-bell-input.sch  fp-lib-table  save-to-kicad-library.sh  stm32-wifi-door-bell-audio.sch  stm32-wifi-door-bell-button.cmp  stm32-wifi-door-bell-button.kicad_pcb  stm32-wifi-door-bell-button.net  stm32-wifi-door-bell-button.pro  stm32-wifi-door-bell-cache.lib  stm32-wifi-door-bell-input.sch  stm32-wifi-door-bell-power.sch  stm32-wifi-door-bell-sdcard.sch  stm32-wifi-door-bell-wifi.sch  stm32-wifi-door-bell.bak  stm32-wifi-door-bell.cmp  stm32-wifi-door-bell.kicad_pcb  stm32-wifi-door-bell.lib  stm32-wifi-door-bell.lib.list  stm32-wifi-door-bell.net  stm32-wifi-door-bell.pro  stm32-wifi-door-bell.sch  update-from-kicad-library.sh
hardware/button-v20140131/: stm32-wifi-door-bell-button-print.gvp  stm32-wifi-door-bell-button.gbl  stm32-wifi-door-bell-button.gbo  stm32-wifi-door-bell-button.gbs  stm32-wifi-door-bell-button.gko  stm32-wifi-door-bell-button.gtl  stm32-wifi-door-bell-button.gto  stm32-wifi-door-bell-button.gts  stm32-wifi-door-bell-button.gvp  stm32-wifi-door-bell-button.txt
hardware/v20150125/: stm32-wifi-door-bell-print.gvp  stm32-wifi-door-bell.gbl  stm32-wifi-door-bell.gbo  stm32-wifi-door-bell.gbs  stm32-wifi-door-bell.gko  stm32-wifi-door-bell.gtl  stm32-wifi-door-bell.gto  stm32-wifi-door-bell.gts  stm32-wifi-door-bell.gvp  stm32-wifi-door-bell.txt
simulations/: audio.asc  button-power.asc  speaker.asc  speaker.asy
