PROJECT(stm32-wifi-door-bell)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENABLE_LANGUAGE(ASM)

SET(STM32LIB_DIR "/home/jferner/dev/stm32lib/lib")

INCLUDE_DIRECTORIES(
  ${STM32LIB_DIR}
  .
)

SET(STM32_CHIP "STM32F072RBT6")
SET(STM32_CHIP_DEF "STM32F072")
SET(STM32_FLASH_SIZE "131072")
SET(STM32_RAM_SIZE "16384")

SET(PROJECT_SOURCES
  ${STM32LIB_DIR}/stm32lib/hal/rcc.c
  ${STM32LIB_DIR}/stm32lib/hal/gpio.c
  ${STM32LIB_DIR}/stm32lib/hal/usart.c
  ${STM32LIB_DIR}/stm32lib/hal/exti.c
  ${STM32LIB_DIR}/stm32lib/hal/spi.c
  ${STM32LIB_DIR}/stm32lib/usart.c
  ${STM32LIB_DIR}/stm32lib/rcc.c
  ${STM32LIB_DIR}/stm32lib/time.c
  ${STM32LIB_DIR}/stm32lib/exti.c
  ${STM32LIB_DIR}/stm32lib/spi.c
  ${STM32LIB_DIR}/stm32lib/debug.c
  ${STM32LIB_DIR}/stm32lib/device/sdcard/fat.c
  ${STM32LIB_DIR}/stm32lib/device/sdcard/sdcard.c
  ${STM32LIB_DIR}/stm32lib/newlib.c

  system_stm32f0xx.c
  main.c
  interrupts.c
)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUSE_FULL_ASSERT -D${STM32_CHIP_DEF}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_FULL_ASSERT -D${STM32_CHIP_DEF}")
SET(CMAKE_EXE_LINKER_FLAGS "-T${CMAKE_CURRENT_BINARY_DIR}/../stm32f072rb_flash.ld ${CMAKE_EXE_LINKER_FLAGS}")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES} stm32f072rb_flash.ld startup_stm32f072xb.s)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}.elf)

ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.hex DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Oihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.hex)
ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.bin DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)
ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.list DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJDUMP} -x -S ${CMAKE_PROJECT_NAME}.elf > ${CMAKE_PROJECT_NAME}.list)

